Updated terminal.html with recent changes

--- a/terminal.html
+++ b/terminal.html
@@ -125,7 +125,7 @@
             </div>
             <div>
                 <p>
-                    <span style="color: rgb(132, 245, 57); ">Prince@k's-HP2000</span>
+                    <span style="color: rgb(132, 245, 57); ">Prince@k's-MacBook M1</span>
                     <span style="color: rgb(247, 247, 68);">(main)</span>
                     <span style="color: red; border: 2px;"> ~> </span>
                     Hi,You just stepped into Prince's public terminal .I am currently being built up.Once ready,I will
